Fixed #30 Menu issue on IE

--- a/style.css
+++ b/style.css
@@ -2249,15 +2249,15 @@ div.wpcf7-mail-sent-ok {
 	    vertical-align: middle;
 	}
 	.header-inner-site-branding {
-		width: initial;
+		width: 250px;
 		overflow: initial;
 		display: table-cell; 
 		vertical-align: middle;
 	}
 	.main-navigation {
 		max-height: initial;
-		overflow-x: initial;
-		overflow-y: initial;
+		overflow-x: visible;
+		overflow-y: visible;
 	}
 	.main-navigation li.has_children > a {
 	    padding-right: 16px;
@@ -2280,8 +2280,8 @@ div.wpcf7-mail-sent-ok {
 	}
 	.main-navigation ul {
 		max-height: initial;
-		overflow-x: initial;
-		overflow-y: initial;
+		overflow-x: visible;
+		overflow-y: visible;
 		margin-top: 0;
 	}
 
@@ -2306,13 +2306,11 @@ div.wpcf7-mail-sent-ok {
 	.main-navigation ul ul a {
 		width: 200px;
 	}
-	.main-navigation li {
-		width: initial;
-	}
 	.main-navigation ul ul a {
 		color: #fff;
 	}
 	.main-navigation li {
+		width: auto;
 		border-top: none;
 		float: none;
 		display: inline-block;
